--- a/app/assets/stylesheets/settings/_grid.sass
+++ b/app/assets/stylesheets/settings/_grid.sass
@@ -8,3 +8,7 @@ $max-width: 620px
 // $visual-grid-color: red
 // $visual-grid-index: front
 // $visual-grid: true
+
+$mobile-size: em(780)
+
+$mobile: new-breakpoint(min-width em(320) max-width $mobile-size 4)
