--- a/app/assets/stylesheets/settings/_typography.sass
+++ b/app/assets/stylesheets/settings/_typography.sass
@@ -26,9 +26,17 @@ time
     size: rem(64)
   line-height: rem(69)
 
+  +media($mobile)
+    font-size: rem(28)
+    line-height: rem(32)
+
   .label
     font-size: rem(18)
     line-height: rem(19)
+
+    +media($mobile)
+      font-size: rem(14)
+      line-height: rem(18)
 
 .location h2
   font-size: rem(36)
